Mon Jan 21 11:42:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/<various>: Remove the ACL mechanism from the server and by
   default only listen to the localhost (127.0.0.1 and/or [::1] address).

Fri Jan 18 15:26:45 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-xml: add support for MGE* Environment Sensor (ref 66 846).
   This adds the data ambient.temperature and ambient.humidity, and
   is equivalent to the below snmp-ups feature.
   This change affects mge-hid.c but only applies to mge-xml since
   this sensor is a pure Network Management Card addon.

Fri Jan 18 14:03:01 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * snmp-ups:
   - mgemib.h: add support for MGE* Environment Sensor (ref 66 846).
     This adds the data ambient.temperature and ambient.humidity.
   - snmp-ups.c: fix the handling of multiplier on ambient.temperature
     for units other than APC. Bump driver release to 0.43

Tue Jan 15 15:25:10 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Fixed year lag on me and Arnaud in ChangeLog. We where stuck in 2007.
    And some dates. Thanks to Janos Farkas

Tue Jan 15 06:59:00 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Added line in nut-usbups.rules.in for Powerware 3110 5115 and 9120 using
   the old interface.(Also fixed a day problem in ChangeLog)

Mon Jan 14 22:20:44 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: changed default subdriver for Unitek Alpha
   1200Sx to phoenix.

Mon Jan 14 20:49:48 UTC 2008 / Peter Selinger <selinger@users.sourceforge.net>

 - upsdrvctl: pass "-u" flag to the driver also in shutdown mode. Print
   actual command line when debugging.
	
Wed Jan 10 14:37:34 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * mge-xml: new experimental driver for MGE (Office Protection Systems
   and UPS Systems) Network Management Cards and Proxy.
   This driver use the same HID core as usbhid-ups and newmge-shut